[build-system]
requires = [
    "setuptools >= 68.2.2",
    "setuptools-scm[toml] >= 7.1.0",
    "wheel >= 0.41.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "rustpy01"
description = "Bootstrap a project easily"
# Use the following command to find all places to update Python versions
#   rg --hidden --files | rg -v ".min.js" | xargs rg -I "3[\.]*10" | rg "(py|ver)"
requires-python = ">=3.10"
# keywords = ["anything"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "setuptools >= 68.2.2",
    "setuptools-scm[toml] >= 7.1.0",
    "types-setuptools==68.2.0.0",    # Bump types-* only with mypy
    "typing-extensions ~= 4.8.0",    # Directly import Self from typing on Python 3.11+
    "wheel >= 0.41.2",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
test = [
    "bashate ~= 2.1.1",
    'coverage ~= 7.3.2; python_version >= "3.11"',
    'coverage[toml] ~= 7.3.2; python_version <= "3.10"',
    "mypy ~= 1.6.1",
    "pylint ~= 3.0.2",
    'pyright==1.1.335; platform_system == "Linux"',
    "pytest ~= 7.4.3",
    "pytest-cov ~= 4.1.0",
    "pytest-dependency ~= 0.5.1",
    "pytest-instafail ~= 0.5.0",
    "pytest-mypy ~= 0.10.3",
    "pytest-pylint ~= 0.21.0",
    "pytest-randomly ~= 3.15.0",
    "pytest-ruff ~= 0.2.1",
    "pytest-xdist ~= 3.3.1",
    "refurb ~= 1.22.1",
    "ruff ~= 0.1.4",
    "sphinx ~= 7.2.6",
    "vulture ~= 2.10",
]

[tool.setuptools.dynamic]
version = { attr = "rustpy01.__version__" }
readme = { file = ["README.md", "CHANGELOG.md"] }

[tool.setuptools_scm]
write_to = "rustpy01/_version.txt"

##### Other tools #####

[tool.coverage.report]
# Taken from: https://coverage.readthedocs.io/en/coverage-5.5/config.html#syntax
exclude_lines = [
    "def __repr__",               # Ignore missing debug-only code
    "except ImportError(.*):",    # Likely Python version-specific code
    "if 0:",                      # Ignore non-runnable code not being run
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:", # Ignore non-runnable code not being run
    "pragma: no cover",
    "raise AssertionError",       # Ignore tests not hitting defensive assertion code
    "raise NotImplementedError",  # Ignore tests not hitting defensive assertion code
]
fail_under = 80 # Minimum code coverage percent
show_missing = true

[tool.coverage.run]
concurrency = ["multiprocessing"]
omit = [
    "*/.egg/*",
    "*/.eggs/*",
    "*/.tox/*",
    "*/__main__.py",
    "*/build/*",
    "*/dist/*",
]
parallel = true
sigterm = true
source = ["rustpy01/", "tests/"]

[tool.mypy]
disallow_any_unimported = true
exclude = ["build/"]
namespace_packages = true
python_version = "3.10"
show_error_codes = true
strict = true
warn_unreachable = true

# Add Python modules to be ignored by mypy here
# [[tool.mypy.overrides]]
# module = []
# ignore_missing_imports = true

[tool.pylint.basic]
# Good variable names which should always be accepted, separated by a comma
good-names = ["_", "ex", "f", "g", "i", "j", "k", "Run"]

[tool.pylint.design]
max-attributes = 12

[tool.pylint.format]
max-line-length = 88

[tool.pylint.imports]
allow-any-import-level = ["resource", "winreg"]

[tool.pylint.main]
# Use multiple processes to speed up Pylint.
# Note that sometimes the duplicate-code checker runs properly only when set to 1
jobs = 3
# Whole list retrieved on 2023-10-20 from: https://pylint.pycqa.org/en/latest/user_guide/checkers/extensions.html
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.broad_try_clause",
    "pylint.extensions.check_elif",
    "pylint.extensions.code_style",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
    "pylint.extensions.dunder",
    "pylint.extensions.empty_comment",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    # "pylint.extensions.magic_value",  # Too-opinionated
    "pylint.extensions.mccabe",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
]
# Pickle collected data for later comparisons
persistent = "no"

[tool.pylint.similarities]
ignore-comments = "no"
# Ignore imports when computing similarities
ignore-imports = "yes"
min-similarity-lines = 5

[tool.pylint.messages_control]
disable = ["locally-disabled", "suppressed-message"]
enable = [
    "bad-inline-option",
    "c-extension-no-member",
    "consider-using-augmented-assign",
    "deprecated-pragma",
    "eq-without-hash",
    "file-ignored",
    "prefer-typing-namedtuple",
    "raw-checker-failed",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "use-symbolic-message-instead",
    "useless-suppression",
]

[tool.pylint.parameter_documentation]
accept-no-param-doc = "no"
accept-no-raise-doc = "no"
accept-no-return-doc = "no"
accept-no-yields-doc = "no"

[tool.pylint.reports]
# Activate the evaluation score
score = "no"

[tool.pylint.typing]
# Min Python version to use for typing related checks, e.g. ``3.7``
# This should be equal to the min supported Python version of the project
py-version = "3.10"

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "build/"]

[tool.pytest.ini_options]
addopts = [
    "-n=auto",
    "--durations=7",
    "--instafail",
    "--no-cov-on-fail",
    "--pylint-error-types=CRWEFI",
    "--strict-markers",
]
log_level = "DEBUG"
markers = ["online", "slow"]
xfail_strict = true

[tool.refurb]
ignore = ["110"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
ignore = [
    "ANN101",  # The type of Self should be inferred by type checkers automatically
    "COM812",  # Seems to add trailing comma even when arguments already fit on one line
    "D104",    # __init__.py files can be completely blank and not require a docstring
    "D203",    # D211 is used by default, which is incompatible with this
    "D213",    # D212 is used by default, which is incompatible with this
    "EM101",   # String literals is used in exception constructors, stack is readable
    "EM102",   # f-string literals is used in exception constructors, similar to EM101
    "PLR2004", # Difficult to refactor to not use magic values in a big legacy project
    "S603",    # Allow using subprocess methods w/o shell=True, bandit severity is low
    "TRY003",  # Allow specifying long messages outside the exception class
]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = ["ALL"]
target-version = "py310"
unsafe-fixes = true

[tool.ruff.isort]
force-single-line = true
force-sort-within-sections = true

[tool.vulture]
exclude = ["build/", "docs/source/conf_correct.py"]
make_whitelist = true
